_sass/_section.scss
.section {
  width: 100%;
  padding: $spacing-unit 0;
  overflow: hidden;
  background-color: white;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
  color: black;
}

.section__main {
  padding: $spacing-unit;
}

.section__main--column {
  @extend .section__main;

  @include media-query($screen-md) {
    width: 60%;
    float: left;
  }
}

.section__sidebar {
  display: block;

  @include media-query($screen-md) {
    width: 40%;
    float: left;
    padding: $spacing-unit;
  }
}

.section--intro {
  background-color: black;
  background-image: url(/assets/images/background-wheel.jpg);
  background-position: left;
  background-attachment: fixed;
  color: white;
}

.section--about {
  background-image: url(/assets/images/background-bikesign.jpg);
  background-attachment: fixed;
  color: white;
}

.section--join {
  background-color: black;
  background-image: url(/assets/images/background-trafficlight.jpg);
  background-position: left;
  background-attachment: fixed;
  color: white;
}

.section--ideas {
  background-color: $hilight-color;
  color: white;

  @include media-query($screen-lg) {
    background-image: url(/assets/images/background-fablab.jpg);
    background-position: right bottom;
    background-size: 39% auto;
  }
}

.section--post {
  // background-image to be added via inline styles
  background-color: black;
  background-position: left;
  background-attachment: fixed;
  color: white;
}

.section--newsletter {
  background-color: #efefef;
}

